--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Expires" content="0">-->
 
-  <title>Harrison Renewable Energy Test</title>
+  <title>Harrison Renewable Energy</title>
   <meta content="Harrison Renewable Energy makes markets in Renewable Energy Credits (RECs), focusing on both compliance and voluntary markets" name="description">
   <meta content="REC, RECs, Renewable Energy Credits, Carbon, Carbon Offsets, SREC, SRECs, Hydro, Solar, Green, Trading, Broker, Renewable, Renewable Energy, Voluntary, Compliance, Counterparty, Renewable Energy Generation" name="keywords">
   
