--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
           <div class="col-lg-4 col-md-6 footer-newsletter">		
             <a href="https://www.bbb.org/us/ny/new-york/profile/energy-broker/harrison-renewable-energy-llc-0121-87151154/#sealclick" target="_blank" rel="nofollow"><img src="https://seal-newyork.bbb.org/seals/blue-seal-200-42-bbb-87151154.png" style="border: 0; margin-top:20px;" alt="Harrison Renewable Energy, LLC BBB Business Review" /></a>
             <br><br>
-            <img src="https://www.dnb.com/content/dam/english/image-library/Modernization/logos/duns_registered_logo.png" alt="D-U-N-S Registered Seal" style="width: 100px">
+            <a href="https://www.dnb.com/business-directory/company-profiles.harrison_renewable_energy_llc.cd2982d45e27261d460f3c194d7ca8c8.html"><img src="https://www.dnb.com/content/dam/english/image-library/Modernization/logos/duns_registered_logo.png" alt="D-U-N-S Registered Seal" style="width: 100px;" /></a>
           </div>
 
         </div>
