--- a/index.html
+++ b/index.html
@@ -821,11 +821,17 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
           </div> -->
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">		
-            <a href="https://www.bbb.org/us/ny/new-york/profile/energy-broker/harrison-renewable-energy-llc-0121-87151154/#sealclick" target="_blank" rel="nofollow"><img src="https://seal-newyork.bbb.org/seals/blue-seal-200-42-bbb-87151154.png" style="border: 0; margin-top:20px;" alt="Harrison Renewable Energy, LLC BBB Business Review" /></a>
-            <br><br>
-            <a href="https://www.dnb.com/business-directory/company-profiles.harrison_renewable_energy_llc.cd2982d45e27261d460f3c194d7ca8c8.html"><img src="https://www.dnb.com/content/dam/english/image-library/Modernization/logos/duns_registered_logo.png" alt="D-U-N-S Registered Seal" style="width: 100px;" /></a>
+          <div class="flex flex-wrap justify-evenly border-t pt-4 md:pt-0 md:px-20 md:border-t-0">	
+            <div class="basis-1/5 self-center py-6 text-center md:py-9">
+             <a href="https://www.bbb.org/us/ny/new-york/profile/energy-broker/harrison-renewable-energy-llc-0121-87151154/#sealclick" target="_blank" rel="nofollow">
+              <img src="https://images.ctfassets.net/gztkr1jaynk0/1MAS0k4MIBWrAzl2IZ09IQ/7fd9f61280f9579fc327fa9b39c854d0/bbb-accredited-business_2x.png" loading="lazy" width="40" height="64" class="inline-block h-10 w-auto max-w-full opacity-80 grayscale transition duration-200 hover:opacity-1 hover:grayscale-0 sm:h-16">
+             </a>
+            </div>
+            <div class="basis-1/5 self-center py-6 text-center md:py-9">
+             <a href="https://www.dnb.com/business-directory/company-profiles.harrison_renewable_energy_llc.cd2982d45e27261d460f3c194d7ca8c8.html" target="_blank" rel="nofollow">
+              <img src="https://www.dnb.com/content/dam/english/image-library/Modernization/logos/duns_registered_logo.png" loading="lazy" width="40" height="64" class="inline-block h-10 w-auto max-w-full opacity-80 grayscale transition duration-200 hover:opacity-1 hover:grayscale-0 sm:h-16">
+             </a>
+            </div>
           </div>
 
         </div>
