--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   
   <!-- Mobile Hamburger Menu CSS File -->
   <link href="assets/css/hamburgers.min.css?uid=1" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <style>
   	.header-img {
@@ -696,7 +697,7 @@
         </div>
 
         <div class="row" data-aos="fade-up">
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-4 col-md-6">
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Our Address</h3>
@@ -704,7 +705,7 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-4 col-md-6">
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
@@ -713,7 +714,7 @@
             </div>
           </div>
 
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-4 col-md-6">
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
@@ -777,9 +778,9 @@
           <div class="col-lg-5 col-md-6">
             <div class="footer-info">
               <!-- <h3><span class="blue-font-color">H</span>arrison <span class="blue-font-color">R</span>enewable <span class="blue-font-color">E</span>nergy</h3> -->
-              <picture>
-								<source srcset="assets/img/logo/hre_logo2.webp" >
-								<img src="assets/img/logo/hre_logo2.jpg" alt="Harrison Renewable Energy" class="img-fluid" style="max-width: 70%;">
+              <picture class="flex justify-center">
+								<source srcset="assets/img/Footer-logo.png" >
+								<img src="assets/img/Footer-logo.png" alt="Harrison Renewable Energy" class="img-fluid" style="max-width: 70%;">
 							</picture>
 							<!--<img src="assets/img/logo/hre_logo2.png" alt="Harrison Renewable Energy" class="img-fluid" style="max-width: 70%;">-->
 							<br><br>
@@ -821,7 +822,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
           </div> -->
-          <div class="flex flex-wrap justify-evenly border-t pt-4 md:pt-0 md:px-20 md:border-t-0">	
+          <div class="flex flex-wrap justify-center border-t pt-4 md:pt-0 md:px-20 md:border-t-0">	
             <div class="basis-1/5 self-center py-6 text-center md:py-9">
              <a href="https://www.bbb.org/us/ny/new-york/profile/energy-broker/harrison-renewable-energy-llc-0121-87151154/#sealclick" target="_blank" rel="nofollow">
               <img src="https://images.ctfassets.net/gztkr1jaynk0/1MAS0k4MIBWrAzl2IZ09IQ/7fd9f61280f9579fc327fa9b39c854d0/bbb-accredited-business_2x.png" loading="lazy" width="40" height="64" class="inline-block h-10 w-auto max-w-full opacity-80 grayscale transition duration-200 hover:opacity-1 hover:grayscale-0 sm:h-16">
