fixed member images

--- a/index.html
+++ b/index.html
@@ -608,9 +608,9 @@
         <div class="row justify-content-md-center">
         	<!-- <div class="d-flex justify-content-center"> -->
 
-	          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" style="margin-right:15px;">
-	            <div class="member">
-								<picture>
+	          <div class="col-lg-4 col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+	            <div class="member w-full">
+								<picture class="flex justify-center">
 									<!-- <source srcset="assets/img/team/wyatt-portrait1.webp" > -->
 									<!-- <img src="assets/img/team/wyatt-portrait1.jpg" alt="Wyatt Page"> -->
 									<source srcset="assets/img/team/wpage.webp" >
@@ -628,9 +628,9 @@
 	            </div>
 	          </div>
 
-	          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
-	            <div class="member">
-								<picture>
+	          <div class="col-lg-4 col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
+	            <div class="member w-full">
+								<picture class="flex justify-center">
 									<source srcset="assets/img/team/IMG_1418.webp" >
 									<img src="assets/img/team/IMG_1418.jpg" alt="Alexander Page">
 								</picture>
